--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.12",
+    "@hookform/resolvers": "^3.1.1",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.0.3",
