--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "apollo-upload-client": "^17.0.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
+    "framer-motion": "^10.12.17",
     "graphql": "^16.6.0",
     "next": "13.1.6",
     "next-themes": "^0.2.1",
