--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-icons": "^4.7.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-input-mask": "^2.0.4",
+    "react-number-format": "^5.2.2",
     "react-select": "5.7.2",
     "react-toastify": "^9.1.2",
     "sweetalert2": "^11.7.3",
